fix: Atualizando a logica desenvolvida para trabalhar em cima de um extrato real nubank
A logica anterior era em cima de um extrato de fatura de cartão de credito